RESOLVED FIXED90373
A start "body" tag in the "in body" insertion mode is a parse error
https://bugs.webkit.org/show_bug.cgi?id=90373
Summary A start "body" tag in the "in body" insertion mode is a parse error
Kwang Yul Seo
Reported 2012-07-02 04:56:13 PDT
According to HTML5 specification (http://www.w3.org/TR/html5/tree-construction.html#parsing-main-inbody), a start "body" tag in the "in body" insertion mode is a parse error. 8.2.5.4.7 The "in body" insertion mode ... -> A start tag whose tag name is "body" Parse error. If the second element on the stack of open elements is not a body element, or, if the stack of open elements has only one node on it, then ignore the token. (fragment case) Otherwise, set the frameset-ok flag to "not ok"; then, for each attribute on the token, check to see if the attribute is already present on the body element (the second element) on the stack of open elements, and if it is not, add the attribute and its corresponding value to that element.
Attachments
Patch (1.67 KB, patch)
2012-07-02 05:07 PDT, Kwang Yul Seo
no flags
Kwang Yul Seo
Comment 1 2012-07-02 05:07:48 PDT
Eric Seidel (no email)
Comment 2 2012-07-02 09:01:07 PDT
Comment on attachment 150399 [details] Patch OK.
WebKit Review Bot
Comment 3 2012-07-02 09:08:41 PDT
Comment on attachment 150399 [details] Patch Clearing flags on attachment: 150399 Committed r121683: <http://trac.webkit.org/changeset/121683>
WebKit Review Bot
Comment 4 2012-07-02 09:08:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.