A start "body" tag in the "in body" insertion mode is a parse error https://bugs.webkit.org/show_bug.cgi?id=90373

Patch by Kwang Yul Seo <skyul@company100.net> on 2012-07-02
Reviewed by Eric Seidel.

According to HTML5 specification (http://www.w3.org/TR/html5/tree-construction.html#parsing-main-inbody),
a start "body" tag in the "in body" insertion mode is a parse error. So parseError(token) is required here.
No behavior change because parseError(token) is just a marker.

* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::processStartTagForInBody):

git-svn-id: svn://svn.chromium.org/blink/trunk@121683 bbb929c8-8fbe-4397-9dbb-9b2b20218538